@@ -1,6 +1,7 @@
 package io.github.wpunit13.mutator.maven;
 
 import org.apache.maven.execution.MavenSession;
+import io.github.wpunit13.mutator.report.ReportWriter;
 import org.apache.maven.plugin.AbstractMojo;
 import org.apache.maven.plugin.BuildPluginManager;
 import org.apache.maven.plugin.MojoExecutionException;
@@ -20,6 +21,8 @@ import org.eclipse.aether.resolution.ArtifactResolutionException;
 import org.eclipse.aether.resolution.ArtifactResult;
 
 import java.io.File;
+import java.util.ArrayList;
+import java.util.List;
 
 /**
  * Entry point for mutation testing of Java and Scala Spark pipelines:
@@ -30,6 +33,19 @@ import java.io.File;
  * {@code io.github.wpunit13:interceptor-spark-<major.minor>_<scala_ver>} artifact via the
  * Maven Resolver (Aether) API, configures Surefire's {@code argLine} and
  * {@code additionalClasspathElements}, and orchestrates the baseline/mutation loop.
+ *
+ * <p><b>Governance gate exit code (WP-19).</b> When {@code minMutationScore} is
+ * configured and the mutation score is below it, this mojo logs the failure and
+ * calls {@link System#exit(int) System.exit(2)} — a dedicated exit code, distinct
+ * from Maven's generic build-failure code 1, so CI can route the two differently.
+ * The reports are fully flushed to disk by the coordinator before the gate runs, so
+ * the artifact always survives the JVM termination. <b>Tradeoff:</b> the exit
+ * terminates the whole Maven JVM deliberately; in a multi-module reactor the
+ * remaining modules do not build. That is the accepted cost of a distinguishable
+ * governance exit code (a thrown {@code MojoFailureException} would be reported by
+ * Maven as exit code 1, indistinguishable from any other build failure). Set
+ * {@code -Dspark.mutator.exitProcessOnGateFailure=false} to trade the dedicated
+ * exit code for reactor-friendly failure semantics (see that parameter).
  */
 @Mojo(
         name = "mutate",
@@ -65,6 +81,70 @@ public class MutateMojo extends AbstractMojo {
     @Parameter(property = "spark.mutator.minMutationScore", defaultValue = "0.0")
     private double minMutationScore = 0.0;
 
+    /**
+     * WP-24 governance gate: maximum allowed real-failure ERRORED mutants
+     * (dead sessions, shim violations, mutation crashes). Default 0 — zero
+     * tolerance, since a real-failure ERRORED means the harness or engine
+     * misbehaved. Set negative to disable the check (complex plans with
+     * legitimate schema-breaking mutants may need to).
+     */
+    @Parameter(property = "spark.mutator.maxErroredCount", defaultValue = "0")
+    private int maxErroredCount = 0;
+
+    /**
+     * WP-24 governance gate: maximum allowed ratio of designed not-applied
+     * mutants, computed as {@code notApplied / (totalMutants - skipped)}.
+     * Default 0.20 — complex plans with cached branches legitimately produce
+     * some. Set negative to disable the check.
+     */
+    @Parameter(property = "spark.mutator.maxNotAppliedRatio", defaultValue = "0.20")
+    private double maxNotAppliedRatio = 0.20;
+
+    /**
+     * Module-path prefixes limiting which candidates Discovery registers (WP-19).
+     * Settable via {@code -Dspark.mutator.targetModules=a,b} or {@code <configuration>}
+     * (comma-separated on the command line; one element per {@code <targetModules>}).
+     * Empty means no filtering. The engine applies the filter against the
+     * current file-path hint, which no JVM-side harness feeds today — with the
+     * property set and no hint fed, Discovery registers nothing (fail-safe,
+     * with a single warning).
+     */
+    @Parameter(property = "spark.mutator.targetModules")
+    private List<String> targetModules = new ArrayList<>();
+
+    /**
+     * Operator types excluded from mutation (WP-19). Canonical keys are the
+     * {@code OperatorTypeDto} names — {@code JOIN}, {@code FILTER}, {@code AGGREGATE},
+     * {@code WINDOW}, {@code PROJECT}, {@code OTHER} — case-insensitive. Exclusion is
+     * enforced engine-side (Discovery skips excluded operators; the rewrite path
+     * refuses them even with a stale catalog entry) and echoed into the report's
+     * {@code config.excludedMutators} block.
+     */
+    @Parameter(property = "spark.mutator.excludedMutators")
+    private List<String> excludedMutators = new ArrayList<>();
+
+    /**
+     * Gate-failure delivery (WP-19 follow-up). Default {@code true}: a gate
+     * violation terminates the Maven JVM with the dedicated governance-gate
+     * exit code 2. Set {@code false} for multi-module reactors: the gate throws
+     * {@link MojoFailureException} instead — the build still fails (Maven exit
+     * code 1), but the reactor honors {@code --fail-at-end} / {@code --fail-never}
+     * so remaining modules still build. Reports are flushed to disk either way;
+     * pair {@code false} with {@code --fail-at-end} for full-reactor runs.
+     */
+    @Parameter(property = "spark.mutator.exitProcessOnGateFailure", defaultValue = "true")
+    private boolean exitProcessOnGateFailure = true;
+
+    /**
+     * Injects Spark's mandatory modular-runtime JVM args (the {@code --add-opens}
+     * set plus Netty/reflect flags, see {@link SurefireConfigurator#SPARK_JVM_OPEN_ARGS})
+     * into Surefire's {@code argLine} alongside the extension property. Default
+     * {@code true}; nothing is injected on Java 8. Disable only if the fork JDK
+     * is managed by other means (e.g. Maven toolchains).
+     */
+    @Parameter(property = "spark.mutator.injectAddOpens", defaultValue = "true")
+    private boolean injectAddOpens = true;
+
     private MutationLoopCoordinator coordinator;
     private SurefireExecutor surefireExecutor;
 
@@ -87,7 +167,7 @@ public class MutateMojo extends AbstractMojo {
         getLog().info("Resolved interceptor JAR: " + interceptorJar.getAbsolutePath());
 
         // 3. Configure Surefire
-        SurefireConfigurator surefireConfigurator = new SurefireConfigurator();
+        SurefireConfigurator surefireConfigurator = new SurefireConfigurator(injectAddOpens);
         SurefireConfigurator.SurefireConfigResult configResult =
                 surefireConfigurator.configure(project, interceptorJar);
 
@@ -108,7 +188,8 @@ public class MutateMojo extends AbstractMojo {
                 + loopResult.getKilled() + " killed, "
                 + loopResult.getSurvived() + " survived, "
                 + loopResult.getTimedOut() + " timed out, "
-                + loopResult.getErrored() + " errored. "
+                + loopResult.getErrored() + " errored, "
+                + loopResult.getNotApplied() + " not applied. "
                 + "Mutation score: " + loopResult.getMutationScore() + "%");
         getLog().info("Reports written to: " + loopResult.getReportPath());
 
@@ -179,7 +260,9 @@ public class MutateMojo extends AbstractMojo {
                     executor,
                     timeoutMultiplier,
                     reportsDir,
-                    minMutationScore
+                    minMutationScore,
+                    targetModules,
+                    excludedMutators
             );
         }
 
@@ -192,12 +275,65 @@ public class MutateMojo extends AbstractMojo {
         }
     }
 
-    private void enforceQualityGate(MutationLoopCoordinator.MutationLoopResult loopResult) throws MojoFailureException {
-        if (minMutationScore > 0.0 && loopResult.getMutationScore() < minMutationScore) {
-            throw new MojoFailureException(
-                    "Mutation score (" + loopResult.getMutationScore()
-                            + "%) is below minimum threshold (" + minMutationScore + "%).");
+    /**
+     * Governance gate (WP-19): when the score is below the floor, the reports
+     * are already flushed (the coordinator writes them before returning), so
+     * the Mojo terminates the Maven JVM with the dedicated exit code 2 after
+     * logging the failure. See the class javadoc for the JVM-termination
+     * tradeoff.
+     */
+    private void enforceQualityGate(MutationLoopCoordinator.MutationLoopResult loopResult)
+            throws MojoFailureException {
+        // WP-24 population gates first: real-failure ERRORED is zero-tolerance
+        // (a dead session or shim violation means the harness/engine is broken);
+        // the designed not-applied population is ratio-gated (complex plans
+        // with cached branches legitimately produce some).
+        List<String> populationViolations = ReportWriter.evaluateGateViolations(
+                loopResult.getTotalMutants(),
+                loopResult.getErrored(),
+                loopResult.getNotApplied(),
+                0,
+                maxErroredCount,
+                maxNotAppliedRatio);
+        if (!populationViolations.isEmpty()) {
+            populationViolations.forEach(getLog()::error);
+            failGate(loopResult, String.join("; ", populationViolations));
         }
+        if (minMutationScore > 0.0 && loopResult.getMutationScore() < minMutationScore) {
+            String message = "Quality gate FAILED: mutation score (" + loopResult.getMutationScore()
+                    + "%) is below minimum threshold (" + minMutationScore + "%).";
+            getLog().error(message);
+            failGate(loopResult, message);
+        }
+    }
+
+    /**
+     * Delivers a gate violation per {@code exitProcessOnGateFailure}: the
+     * dedicated exit code 2 (WP-19 default), or a {@link MojoFailureException}
+     * for reactor-friendly multi-module builds.
+     */
+    private void failGate(MutationLoopCoordinator.MutationLoopResult loopResult, String message)
+            throws MojoFailureException {
+        getLog().error("Reports are on disk at: " + loopResult.getReportPath());
+        if (exitProcessOnGateFailure) {
+            exitWithGateFailure(GATE_FAILURE_EXIT_CODE);
+            return; // not reached in production
+        }
+        throw new MojoFailureException(message);
+    }
+
+    /**
+     * Dedicated governance-gate exit code (core_idea.md §8): "gate failed (2)"
+     * is distinguishable from Maven's generic "build failed (1)".
+     */
+    static final int GATE_FAILURE_EXIT_CODE = 2;
+
+    /**
+     * Terminates the Maven JVM with the governance-gate exit code. Package-private
+     * seam so tests can observe the exit code without killing the test JVM.
+     */
+    void exitWithGateFailure(int exitCode) {
+        System.exit(exitCode);
     }
 
     void setRepositorySystem(RepositorySystem repoSystem) {
@@ -236,6 +372,22 @@ public class MutateMojo extends AbstractMojo {
         this.minMutationScore = minMutationScore;
     }
 
+    void setTargetModules(List<String> targetModules) {
+        this.targetModules = targetModules;
+    }
+
+    void setExcludedMutators(List<String> excludedMutators) {
+        this.excludedMutators = excludedMutators;
+    }
+
+    void setExitProcessOnGateFailure(boolean exitProcessOnGateFailure) {
+        this.exitProcessOnGateFailure = exitProcessOnGateFailure;
+    }
+
+    void setInjectAddOpens(boolean injectAddOpens) {
+        this.injectAddOpens = injectAddOpens;
+    }
+
     void setCoordinator(MutationLoopCoordinator coordinator) {
         this.coordinator = coordinator;
     }
@@ -266,6 +418,14 @@ public class MutateMojo extends AbstractMojo {
 
     double getMinMutationScore() {
         return minMutationScore;
+    }
+
+    List<String> getTargetModules() {
+        return targetModules;
+    }
+
+    List<String> getExcludedMutators() {
+        return excludedMutators;
     }
 
     MutationLoopCoordinator getCoordinator() {
